--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1 class="header__heading">NEWSFEED</h1>
         <p class="header__caption">Yet another newsfeed</p>
     </header>
+    <div class="full">
     <div class="content">
         <div class="content__sub">
             <div class="content__img"></div>
@@ -52,6 +53,7 @@
         <input type="text" id="subscribe" class="form__subscribe-textbox" placeholder="Email Address">
         <button class="form__subscribe-button">Subscribe</button>
     </div>
+</div>
     <footer class="footer">
         <p class="footer__copyright">&copy; NewsFeed 2019</p>
     </footer>
