Aligned HTML code using prettier

--- a/index.html
+++ b/index.html
@@ -1,61 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100i&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100i&display=swap"
+      rel="stylesheet"
+    />
     <title>Task</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <h1 class="header__heading">NEWSFEED</h1>
-        <p class="header__caption">Yet another newsfeed</p>
+      <h1 class="header__heading">NEWSFEED</h1>
+      <p class="header__caption">Yet another newsfeed</p>
     </header>
     <div class="full">
-    <div class="content">
+      <div class="content">
         <div class="content__sub">
-            <div class="content__img"></div>
-            <h3 class="content__modifier content__head">Title One</h3>
-            <p class="content__modifier content__date">Posted on <b>29 June, 2019</b> // Category: Category One</p>
-            <p class="content__modifier content__matter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nulla porro autem quod, officia, velit magni officiis maxime corrupti quam ex accusamus repellendus deleniti ab! Veniam, harum numquam eum laboriosam nisi libero voluptate, assumenda ipsam tempore ea accusantium eveniet deleniti blanditiis! Saepe praesentium blanditiis pariatur. Iure dolorem reprehenderit earum assumenda.</p>
-            <a href="#" class="content__modifier btn btn--pink">Continue Reading</a>
+          <div class="content__img"></div>
+          <h3 class="content__modifier content__head">Title One</h3>
+          <p class="content__modifier content__date">
+            Posted on <b>29 June, 2019</b> // Category: Category One
+          </p>
+          <p class="content__modifier content__matter">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nulla
+            porro autem quod, officia, velit magni officiis maxime corrupti quam
+            ex accusamus repellendus deleniti ab! Veniam, harum numquam eum
+            laboriosam nisi libero voluptate, assumenda ipsam tempore ea
+            accusantium eveniet deleniti blanditiis! Saepe praesentium
+            blanditiis pariatur. Iure dolorem reprehenderit earum assumenda.
+          </p>
+          <a href="#" class="content__modifier btn btn--pink"
+            >Continue Reading</a
+          >
         </div>
-        <hr>
+        <hr />
         <div class="content__sub">
-                <div class="content__img"></div>
-                <h3 class="content__modifier content__head">Title Two</h3>
-                <p class="content__modifier content__date">Posted on <b>22 June, 2019</b> // Category: Category Two</p>
-                <p class="content__modifier content__matter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nulla porro autem quod, officia, velit magni officiis maxime corrupti quam ex accusamus repellendus deleniti ab! Veniam, harum numquam eum laboriosam nisi libero voluptate, assumenda ipsam tempore ea accusantium eveniet deleniti blanditiis! Saepe praesentium blanditiis pariatur. Iure dolorem reprehenderit earum assumenda.</p>
-                <a href="#" class="content__modifier btn btn--pink">Continue Reading</a>
+          <div class="content__img"></div>
+          <h3 class="content__modifier content__head">Title Two</h3>
+          <p class="content__modifier content__date">
+            Posted on <b>22 June, 2019</b> // Category: Category Two
+          </p>
+          <p class="content__modifier content__matter">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nulla
+            porro autem quod, officia, velit magni officiis maxime corrupti quam
+            ex accusamus repellendus deleniti ab! Veniam, harum numquam eum
+            laboriosam nisi libero voluptate, assumenda ipsam tempore ea
+            accusantium eveniet deleniti blanditiis! Saepe praesentium
+            blanditiis pariatur. Iure dolorem reprehenderit earum assumenda.
+          </p>
+          <a href="#" class="content__modifier btn btn--pink"
+            >Continue Reading</a
+          >
         </div>
-        <hr>
+        <hr />
         <div class="content__sub">
-                <div class="content__img"></div>
-                <h3 class="content__modifier content__head">Title Three</h3>
-                <p class="content__modifier content__date">Posted on <b>20 June, 2019</b> // Category: Category One</p>
-                <p class="content__modifier content__matter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nulla porro autem quod, officia, velit magni officiis maxime corrupti quam ex accusamus repellendus deleniti ab! Veniam, harum numquam eum laboriosam nisi libero voluptate, assumenda ipsam tempore ea accusantium eveniet deleniti blanditiis! Saepe praesentium blanditiis pariatur. Iure dolorem reprehenderit earum assumenda.</p>
-                <a href="#" class="content__modifier btn btn--pink">Continue Reading</a>
+          <div class="content__img"></div>
+          <h3 class="content__modifier content__head">Title Three</h3>
+          <p class="content__modifier content__date">
+            Posted on <b>20 June, 2019</b> // Category: Category One
+          </p>
+          <p class="content__modifier content__matter">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nulla
+            porro autem quod, officia, velit magni officiis maxime corrupti quam
+            ex accusamus repellendus deleniti ab! Veniam, harum numquam eum
+            laboriosam nisi libero voluptate, assumenda ipsam tempore ea
+            accusantium eveniet deleniti blanditiis! Saepe praesentium
+            blanditiis pariatur. Iure dolorem reprehenderit earum assumenda.
+          </p>
+          <a href="#" class="content__modifier btn btn--pink"
+            >Continue Reading</a
+          >
         </div>
-    </div>
-    <div class="form">
-        <label for="sel-category" class="form__select-label"><b>SELECT CATEGORY</b></label>
+      </div>
+      <div class="form">
+        <label for="sel-category" class="form__select-label"
+          ><b>SELECT CATEGORY</b></label
+        >
         <select id="sel-category" class="form__select-box">
-            <option value="All" selected>All</option>
-            <option value="BBC">BBC</option>
-            <option value="FOX">FOX</option>
-            <option value="NBC">NBC</option>
+          <option value="All" selected>All</option>
+          <option value="BBC">BBC</option>
+          <option value="FOX">FOX</option>
+          <option value="NBC">NBC</option>
         </select>
 
-
-        <label for="subscribe" class="form__subscribe-label"><b>SUBSCRIBE</b></label>
-        <input type="text" id="subscribe" class="form__subscribe-textbox" placeholder="Email Address">
+        <label for="subscribe" class="form__subscribe-label"
+          ><b>SUBSCRIBE</b></label
+        >
+        <input
+          type="text"
+          id="subscribe"
+          class="form__subscribe-textbox"
+          placeholder="Email Address"
+        />
         <button class="form__subscribe-button">Subscribe</button>
+      </div>
     </div>
-</div>
     <footer class="footer">
-        <p class="footer__copyright">&copy; NewsFeed 2019</p>
+      <p class="footer__copyright">&copy; NewsFeed 2019</p>
     </footer>
-</body>
+  </body>
 </html>
